--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-navigation": "^4.4.3",
     "react-navigation-header-buttons": "^6.0.0",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-image-picker": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
