--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-navigation-header-buttons": "^6.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "expo-image-picker": "~9.1.1"
+    "expo-image-picker": "~9.1.1",
+    "expo-sqlite": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
