--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^5.12.4",
     "expo": "~39.0.2",
     "expo-font": "^8.3.0",
+    "expo-image-picker": "~9.1.1",
+    "expo-sqlite": "~8.4.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -31,8 +33,8 @@
     "react-navigation-header-buttons": "^6.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "expo-image-picker": "~9.1.1",
-    "expo-sqlite": "~8.4.0"
+    "redux-thunk": "^2.3.0",
+    "expo-file-system": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
